--- a/includes/css/wufoo_banner.css
+++ b/includes/css/wufoo_banner.css
@@ -41,7 +41,7 @@ CSS rules into "custom.css".
 
 #container,
 html.embed {
-    background-color: rgb(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 html {
@@ -55,7 +55,7 @@ html {
 }
 
 #container {
-    background: rgb(255, 255, 255, 0.6)
+    background: rgba(255, 255, 255, 0.5)
 }
 
 .wufoo input.text,
