--- a/includes/css/wufoo_banner.css
+++ b/includes/css/wufoo_banner.css
@@ -55,7 +55,7 @@ html {
 }
 
 #container {
-    background: rgba(255, 255, 255, 0.5)
+    background: rgba(255, 255, 255, 0.5);
 }
 
 .wufoo input.text,
