--- a/includes/css/global.css
+++ b/includes/css/global.css
@@ -1828,7 +1828,7 @@ body.active .page-wrap:after {
 
 .pop-main iframe {
     vertical-align: middle;
-    overflow: hidden !important;
+    overflow: scroll!important;
 }
 
 .pop-wrap .close-btn {
