--- a/includes/css/wufoo_banner.css
+++ b/includes/css/wufoo_banner.css
@@ -1,5 +1,3 @@
-
-
 @import url(https://fonts.googleapis.com/earlyaccess/notosanstc.css);
 /* Logo */
 
@@ -45,8 +43,15 @@ html {
     color: white;
 }
 
+.wufoo li.focused label.desc {
+    color: white;
+}
+
 #container {
     background: rgba(0, 0, 0, 0.5);
+}
+.centerFormProp{
+    text-align: left;
 }
 
 .wufoo input.text,
