--- a/includes/css/wufoo_banner.css
+++ b/includes/css/wufoo_banner.css
@@ -64,7 +64,7 @@ html {
     border: 2px solid #ccc;
     border-radius: 0;
     width: 100%;
-    color: #666;
+    color: white;
     font-weight: normal;
     background-color: transparent;
     -moz-transition: all 0.3s;
