--- a/includes/css/wufoo_bottom.css
+++ b/includes/css/wufoo_bottom.css
@@ -43,7 +43,7 @@ html{background-image:none;background-color:#FFFFFF}
     -o-transition: all 0.3s;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;}
-.wufoo .focused{background:#FFF7C0}
+.wufoo .focused{background:white}
 .wufoo .instruct{background-color:#F5F5F5}
 
 /* Borders */
@@ -52,7 +52,7 @@ html{background-image:none;background-color:#FFFFFF}
 .wufoo .instruct{border:1px solid #e6e6e6}
 
 /* Typography */
-.wufoo .info h2{font-size:25px;font-family:inherit;color:#999}
+.wufoo .info h2{font-size:40px;font-family:inherit;color:rgb(32, 41, 82);}
 .wufoo .info div{font-size:23px;font-family:inherit;color:#333}
 .wufoo .section h3{font-size:110%;font-family:inherit;background:#FFFFFF;color:#666}
 .wufoo .section div{font-size:85%;font-family:inherit;color:#333}
