--- a/includes/css/wufoo_banner.css
+++ b/includes/css/wufoo_banner.css
@@ -156,7 +156,7 @@ html {
     width: 100%;
     color: white;
     font-weight: normal;
-    background-color: transparent;
+    background-color: white;
     -moz-transition: all 0.3s;
     -o-transition: all 0.3s;
     -webkit-transition: all 0.3s;
